Tried to fix styling on mobile with smaller screen sizes.

--- a/styles/common.css
+++ b/styles/common.css
@@ -308,7 +308,7 @@ body
     body > *
     {
         width: 100%;
-        min-width: 400px;
+        min-width: 350px;
     }
 
     body > header
@@ -334,26 +334,10 @@ body
     }
 }
 
-@media screen and (min-resolution: 2dppx)
+@media screen and (max-width: 365px)
 {
-    body
+    body > header
     {
-        font-size: 16px;
+        height: 225px;
     }
-
-        body > *
-        {
-            width: 100%;
-            min-width: 400px;
-        }
-
-        body > header
-        {
-            margin-top: 0;
-        }
-
-        body > article > header {
-            flex-flow: row wrap;
-            justify-content: right;
-        }
 }
